--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -1,32 +1,36 @@
-<span *ngIf="!isMobile" class="desktop-only">
+@if (!isMobile) {
+  <span class="desktop-only">
     <div class="filter-header">
-    <h5>Filters</h5>
-    <ngx-slider [(value)]="minValue" [(highValue)]="maxValue" [options]="options"
-    (userChangeEnd)="onUserChangeEnd($event)"></ngx-slider>
-    <div class="filter-footer">
+      <h5>Filters</h5>
+      <ngx-slider [(value)]="minValue" [(highValue)]="maxValue" [options]="options"
+      (userChangeEnd)="onUserChangeEnd($event)"></ngx-slider>
+      <div class="filter-footer">
         <div>Price</div>
         <button class="apply-price" (click)="applyFilter()">Apply</button>
+      </div>
     </div>
-    </div>
-</span>
+  </span>
+}
 
-<span *ngIf="isMobile" class="mobile-only">
+@if (isMobile) {
+  <span class="mobile-only">
     <div class="modal-dialog modal-dialog-centered sort-modal-dialog" #filterProductsModal>
       <div class="modal-content">
-      <div class="modal-header mobile-options-header">Filter Options</div>
-      <div class="modal-body">
-        <ngx-slider [(value)]="minValue" [(highValue)]="maxValue" [options]="options"
-        (userChangeEnd)="onUserChangeEnd($event)"></ngx-slider>
-        <div class="filter-footer">
+        <div class="modal-header mobile-options-header">Filter Options</div>
+        <div class="modal-body">
+          <ngx-slider [(value)]="minValue" [(highValue)]="maxValue" [options]="options"
+          (userChangeEnd)="onUserChangeEnd($event)"></ngx-slider>
+          <div class="filter-footer">
             <div>Price</div>
+          </div>
+        </div>
+        <div class="modal-footer modal-button-group">
+          <div class="btn-group button-group-container" role="group">
+            <button type="button" (click)="hide()" class="btn btn-light button-submit">Cancel</button>
+            <button type="button" (click)="applyFilterMobile()" class="btn btn-light button-submit">Apply</button>
+          </div>
         </div>
       </div>
-      <div class="modal-footer modal-button-group">
-          <div class="btn-group button-group-container" role="group">
-          <button type="button" (click)="hide()" class="btn btn-light button-submit">Cancel</button>
-          <button type="button" (click)="applyFilterMobile()" class="btn btn-light button-submit">Apply</button>
-          </div>
-      </div>
-      </div>
-  </div>
+    </div>
   </span>
+}
