--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,23 +1,25 @@
-  <div class="app_header">
-    <span class="header_block">
-      <span class="header-logo-block">
-          
-        <span class="header-icon star-icon" routerLink="/common">
-            <i class="fas fa-star"></i>
-        </span>
+<div class="app_header">
+  <span class="header_block">
+    <span class="header-logo-block">
+      <span class="header-icon star-icon" routerLink="/common">
+        <i class="fas fa-star"></i>
       </span>
     </span>
-    <span class="logout_block">
-        <app-search></app-search>
-        <span class="header-icon search-icon">
-            <i class="fas fa-search"></i></span>
-        <span *ngIf="!cartIconLink"class="header-icon cart-icon" routerLink="/cart-icon">
-            <span class="fas fa-shopping-cart">
-                <span *ngIf="addedProductsCount>0" class="cart-container fa-stack fa-3x">
-                    <span class="fa fa-circle fa-stack-1x"></span>
-                    <strong class="fa-stack-1x num">{{addedProductsCount}}</strong>
-                </span>
-            </span>
+  </span>
+  <span class="logout_block">
+    <app-search></app-search>
+    <span class="header-icon search-icon"> <i class="fas fa-search"></i></span>
+    @if(!cartIconLink) {
+    <span class="header-icon cart-icon" routerLink="/cart-icon">
+      <span class="fas fa-shopping-cart">
+        @if(addedProductsCount > 0) {
+        <span class="cart-container fa-stack fa-3x">
+          <span class="fa fa-circle fa-stack-1x"></span>
+          <strong class="fa-stack-1x num">{{ addedProductsCount }}</strong>
         </span>
-      </span>   
-    </div>
+        }
+      </span>
+    </span>
+    }
+  </span>
+</div>
